AG-2872 - fixed charts on IE11

--- a/packages/ag-grid-community/src/styles/_ag-grid-charts.scss
+++ b/packages/ag-grid-community/src/styles/_ag-grid-charts.scss
@@ -98,11 +98,19 @@
         }
     }
 
-
     .ag-chart-data-wrapper {
         width: 100%;
         height: 100%;
         overflow: auto;
         position: relative;
+    }
+}
+
+/* targets IE11 only */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .ag-chart-tabbed-menu {
+        .ag-chart-settings-mini-wrapper {
+            justify-content: center;
+        }
     }
 }
